# sparrow

./: .gitignore  Cargo.toml  README.md  aliases.js  config.json  configuration.md  index.html  search-index.js  settings.html  source-files.js
doc/: index.md  search-index.js  update-doc.sh
examples/: adult.rs  bathymetry.rs  config.yaml  config_adult.yaml  config_bal_bathymetry.yaml  config_bal_bathymetry_100M.yaml  config_bal_bathymetry_1G.yaml  config_bal_bathymetry_5G.yaml  config_bathymetry-100G.yaml  config_bathymetry-10G.yaml  config_bathymetry-1G.yaml  config_bathymetry-20G.yaml  config_bathymetry.yaml  config_small_bal_bathymetry.yaml  config_small_bathymetry.yaml  config_small_covtype.libsvm  config_small_splice.yaml  config_splice.yaml  config_splice_1g.yaml  config_splice_1p.yaml  config_splice_20p.yaml  config_splice_debug.yaml  config_synthetic.yaml  config_synthetic_det.yaml  config_synthetic_prob.yaml  config_synthetic_tree_det.yaml  config_synthetic_tree_prob.yaml  config_testing_small_bal_bathymetry.yaml  config_testing_splice.yaml  config_testing_synthetic_det.yaml  run_sparrow.rs  splice.py  splice.rs  train_config.rs
notebooks/: local-speed.ipynb  local.ipynb  network.ipynb  network.pickle  speed_all_feature_sizes-4.pkl  speed_all_feature_sizes.pkl  speed_local.pkl  tree_info_local.pkl
scripts/: clear_workspace.sh  count.sh  gen-config.sh  get-ips.sh  ips.txt  run-on-network.sh  run-single-machine.sh  run.sh  set_env.sh  validate.sh
sparrow/: Example.t.html  RawExample.t.html  RawTFeature.t.html  all.html  constant.BUCKET.html  fn.testing.html  (+12 more)
(+588 files in other folders)
