[package]
name = "rust-boost"
version = "0.1.0"
authors = ["Julaiti Alafate <jalafate@gmail.com>"]

[dependencies]
log = "0.4.1"
env_logger = "0.5.5"
ordered-float = "0.5.0"
rand = "0.4.2"
rayon = "1.0.0"
chan = "0.1.21"
threadpool = "1.7.1"
time = "0.1.39"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.11"
bufstream = "0.1.3"
bincode = "1.0.0"
