[package]
name = "sparrow"
version = "0.1.0"
authors = ["Julaiti Alafate <jalafate@gmail.com>"]

[[bin]]
name = "sparrow"
path = "src/bin.rs"

[dependencies]
log = "0.4.1"
env_logger = "0.5.5"
ordered-float = "0.5.0"
rand = "0.4.2"
rayon = "1.0.3"
crossbeam-channel = "0.2.6"
threadpool = "1.7.1"
time = "0.1.39"
serde = "1.0.33"
serde_derive = "1.0.33"
serde_json = "1.0.11"
serde_yaml = "0.7.5"
bufstream = "0.1.3"
bincode = "1.0.0"
evmap = "4.0.0"
lazy_static = "1.1.0"
tmsn = { path = "../tmsn" }
metricslib = { path = "../metricslib" }

[profile.release]
debug = true